WIP: More dark mode colour fixes

--- a/docfx_project/templates/sorted-styles/styles/main.css
+++ b/docfx_project/templates/sorted-styles/styles/main.css
@@ -148,7 +148,11 @@ a {
     font-weight: normal;
 }
 
-a:hover,
+a:hover {
+    color: var(--colour-link-hover);
+    text-decoration: underline;
+}
+
 a:focus,
 a:visited,
 a:active {
@@ -166,9 +170,9 @@ article a {
 
 code {
     font-size: 16px;
-    color: var(--colour-dark);
+    color: var(--colour-code-content);
     word-break: break-word;
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: var(--colour-code-background);
     padding: 3px;
     border-radius: 3px;
     font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
@@ -546,16 +550,16 @@ ul.level1 {
 }
 
 .toc-filter {
-    border: 1px solid var(--colour-light-grey-1);
+    border: 1px solid var(--colour-search-border);
     border-radius: 3px;
     font-size: 0.875rem;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.108);
-    background-color: var(--colour-light-1);
+    background-color: var(--colour-search-background);
     color: var(--colour-dark);
 }
 
 .toc-filter>input {
-    background-color: var(--colour-light-1);
+    background-color: var(--colour-search-background);
 }
 
 .toc-filter:hover {
@@ -650,6 +654,7 @@ button.staticTabButton {
 .responseTabContent pre,
 .staticTabContent pre {
     margin: 0;
+    border: 0 none;
 }
 
 /* Collapse styles*/
